==> NaitikSanas/MicroCanvas/components/SSD1306_Driver/src/ssd1306.c <==
#include "ssd1306.h"
#define SSD1306_WRITECOMMAND(command)      ssd1306_I2C_Write(SSD1306_I2C_ADDR, 0x00, (command))
#define SSD1306_WRITEDATA(data)            ssd1306_I2C_Write(SSD1306_I2C_ADDR, 0x40, (data))
#define ABS(x)   ((x) > 0 ? (x) : -(x))
#define SSD1306_RIGHT_HORIZONTAL_SCROLL              0x26
#define SSD1306_LEFT_HORIZONTAL_SCROLL               0x27
#define SSD1306_VERTICAL_AND_RIGHT_HORIZONTAL_SCROLL 0x29
#define SSD1306_VERTICAL_AND_LEFT_HORIZONTAL_SCROLL  0x2A
#define SSD1306_DEACTIVATE_SCROLL                    0x2E // Stop scroll
#define SSD1306_ACTIVATE_SCROLL                      0x2F // Start scroll
#define SSD1306_SET_VERTICAL_SCROLL_AREA             0xA3 // Set scroll range
#define SSD1306_NORMALDISPLAY       0xA6
#define SSD1306_INVERTDISPLAY       0xA7

void ssd1306_I2C_WriteMulti(uint8_t address, uint8_t reg, uint8_t* data, uint16_t count) {
	// uint8_t dt[256];
	// dt[0] = reg;
	// uint8_t i;
	// for(i = 0; i < count; i++)
	// dt[i+1] = data[i];
	// HAL_I2C_Master_Transmit(&hi2c1, address, dt, count+1, 10);
	
	i2c_cmd_handle_t cmd;
    cmd = i2c_cmd_link_create(); 

    i2c_master_start(cmd); //start I2C transaction
    i2c_master_write_byte(cmd,address , true); //send Address with write Bit
    i2c_master_write_byte(cmd,reg,1); //Send Register Address
	//printf("length of tx data %d || Count in function %d \n ", sizeof(data), count);
    
	i2c_master_write(cmd, data,count,true);
    i2c_master_stop(cmd);

    i2c_master_cmd_begin(i2c_master_port,cmd, 50);
    i2c_cmd_link_delete(cmd);
}

void ssd1306_I2C_Write(uint8_t address, uint8_t reg, uint8_t data) {
	// uint8_t dt[2];
	// dt[0] = reg;
	// dt[1] = data;
	// HAL_I2C_Master_Transmit(&hi2c1, address, dt, 2, 10);

	i2c_cmd_handle_t cmd;
    cmd = i2c_cmd_link_create(); 

    i2c_master_start(cmd); //start I2C transaction
    i2c_master_write_byte(cmd,address, true); //send Address with write Bit
    i2c_master_write_byte(cmd,reg,1); //Send Register Address

	i2c_master_write(cmd, &data, 1 ,true);
    i2c_master_stop(cmd);

    i2c_master_cmd_begin(i2c_master_port,cmd, 50);
    i2c_cmd_link_delete(cmd);
}
